added buttons, debugged functions in javaScript

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
   </header>
 
   <main>
-    <section>
-      <div class="questions">Questions</div>
-    </section>
+    <section class="questions">Questions</section>
 
     <section>
       <button onclick="scoreBoard()">Scoreboard</button>
-        <div class="scoreboard">
+        <div id="scoreboard">
           <button class="reset-button">Clear Scores</button>
         </div>
 
